--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 <body>
     <header class="cabecalho">
     <div class="container">
-        <span class="cabecalho_menu-hambuguer"></span>
+        <input type="checkbox" id="menu" class="container_botao">
+        <label for="menu">
+            <span class="cabecalho_menu-hambuguer container_imagem"></span>
+        </label>
+        <ul class="lista-menu">
+            <li class="lista-menu_titulo">Categorias</li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Programação</a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Front-end</a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Infraestrutura</a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Business</a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Design & UX</a>
+            </li>
+        </ul>
         <img src="/imagens/Logo.svg" alt="" class="container_imagem">
     </div>
     <div class="container">
