--- a/index.html
+++ b/index.html
@@ -5,12 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
     <header class="cabecalho">
     <div class="container">
-        <span class="cabecalho_menu-hambuguer"></span>
+        <input type="checkbox" id="menu" class="container_botao">
+        <label for="menu">
+            <span class="cabecalho_menu-hambuguer container_imagem"></span>
+        </label>
+        <ul class="lista-menu">
+            <li class="lista-menu_titulo">Categorias</li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Programação</a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Front-end</a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Infraestrutura</a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Business</a>
+            </li>
+            <li class="lista-menu_item">
+                <a href="" class="lista-menu_link">Design & UX</a>
+            </li>
+        </ul>
         <img src="/imagens/Logo.svg" alt="" class="container_imagem">
     </div>
     <div class="container">
@@ -19,5 +41,10 @@
         <a href=""><img src="/imagens/Usuario.svg" alt="" class="container_imagem"></a>
     </div>
     </header>
+    <section class="banner">
+        <h2 class="banner_titulo">Já sabe por onde começar?</h2>
+        <p class="banner_texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+        <input type="search" class="banner_pesquisa" placeholder="Qual será sua próxima leitura?">
+    </section>
 </body>
 </html>
