--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
 <body>
     <header class="cabecalho">
     <div class="container">
-        <input type="checkbox" id="menu" class="container_botao">
+        <input type="checkbox" id="menu" class="container__botao">
         <label for="menu">
-            <span class="cabecalho_menu-hambuguer container_imagem"></span>
+            <span class="cabecalho_menu-hambuguer container__imagem"></span>
         </label>
         <ul class="lista-menu">
             <li class="lista-menu_titulo">Categorias</li>
             <li class="lista-menu_item">
-                <a href="" class="lista-menu_link">Programação</a>
+                <a href="" class="lista-menu__link">Programação</a>
             </li>
-            <li class="lista-menu_item">
-                <a href="" class="lista-menu_link">Front-end</a>
+            <li class="lista-menu__item">
+                <a href="" class="lista-menu__link">Front-end</a>
             </li>
-            <li class="lista-menu_item">
-                <a href="" class="lista-menu_link">Infraestrutura</a>
+            <li class="lista-menu__item">
+                <a href="" class="lista-menu__link">Infraestrutura</a>
             </li>
-            <li class="lista-menu_item">
-                <a href="" class="lista-menu_link">Business</a>
+            <li class="lista-menu__item">
+                <a href="" class="lista-menu__link">Business</a>
             </li>
-            <li class="lista-menu_item">
-                <a href="" class="lista-menu_link">Design & UX</a>
+            <li class="lista-menu__item">
+                <a href="" class="lista-menu__link">Design & UX</a>
             </li>
         </ul>
-        <img src="/imagens/Logo.svg" alt="" class="container_imagem">
+        <img src="/imagens/Logo.svg" alt="" class="container__imagem">
     </div>
     <div class="container">
-        <a href=""><img src="/imagens/Favoritos.svg" alt="" class="container_imagem"></a>
-        <a href=""><img src="/imagens/Group.svg" alt="" class="container_imagem"></a>
-        <a href=""><img src="/imagens/Usuario.svg" alt="" class="container_imagem"></a>
+        <a href=""><img src="/imagens/Favoritos.svg" alt="" class="container__imagem"></a>
+        <a href=""><img src="/imagens/Group.svg" alt="" class="container__imagem"></a>
+        <a href=""><img src="/imagens/Usuario.svg" alt="" class="container__imagem"></a>
     </div>
     </header>
     <section class="banner">
-        <h2 class="banner_titulo">Já sabe por onde começar?</h2>
-        <p class="banner_texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-        <input type="search" class="banner_pesquisa" placeholder="Qual será sua próxima leitura?">
+        <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+        <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
 </body>
 </html>
